# casual-mcp-chat

./: .gitignore  README.md  casual_mcp_config-example.json  casual_mcp_config.json  pyproject.toml
mcp-servers/time-v2/: server.py
prompt-templates/: blender-v2.j2  blender.j2  dixie.j2
src/casual_mcp_chat/: app.py  cli.py  session.py  utils.py
src/casual_mcp_chat/files/: casual_mcp_config.json  default.j2
