[project]
name = "casual-mcp-chat"
version = "0.1.0"
description = "Web Interface for Casual MCP"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alex Stansfield" }]
dependencies = [
    "casual-mcp>=0.3.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[project.scripts]
casual-mcp-chat = "casual_mcp_chat.cli:app"

[tool.ruff]
line-length = 100
lint.extend-select = ["I", "UP", "F", "E", "W"]